# ray-tracer

./: Cargo.toml  README.md
src/: camera.rs  computation.rs  intersections.rs  lib.rs  light.rs  main.rs  materials.rs  pattern.rs  plane.rs  ray_rgb.rs  shape.rs  sphere.rs  world.rs
src/discard/: ray.rs  ray_new.rs  sphere_old.rs  tuples.rs
