[package]
name = "ray_tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_approx_eq = "1.1.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "2.0.1"
image = "0.24.4"
palette = "0.6.1"
jpeg-decoder = "0.3.0"
crossbeam = "0.8"
rayon = "1"
num = "0.4"
approx = "0.5"
derive_builder = "0.11"
rapier3d = { version = "0.15", features = ["simd-stable"] }
